--- a/web.config
+++ b/web.config
@@ -10,11 +10,9 @@
                 resourceType="Unspecified" />
         </handlers>
         <httpPlatform 
-            processPath="C:\Program Files\nodejs\node.exe"
-            arguments="C:\Website\meigetsu\Calendar\index.js">
-            <environmentVariables>
-                <environmentVariable name="FOO_VAR" value="Hello!" />
-            </environmentVariables>
+            processPath="node.exe"
+            arguments="index.js">
+            <environmentVariables></environmentVariables>
         </httpPlatform>
     </system.webServer>
 </configuration>
