add port in setup command

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,4 +23,5 @@ pipelines:
               SSH_USER: Kamioda
               MODE: 'command'
               SERVER: 'meigetsu.jp'
+              PORT: '26'
               COMMAND: 'cd C:\Website\meigetsu\Calendar && npm install'
