fix ssh execute command

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -24,4 +24,4 @@ pipelines:
               MODE: 'command'
               SERVER: 'meigetsu.jp'
               PORT: '26'
-              COMMAND: 'cd C:\Website\meigetsu\Calendar && npm install'
+              COMMAND: 'cd C:\\Website\\meigetsu\\Calendar && npm install'
