rename server core js

--- a/web.config
+++ b/web.config
@@ -11,7 +11,7 @@
         </handlers>
         <httpPlatform 
             processPath="C:\Program Files\nodejs\node.exe"
-            arguments="C:\Website\meigetsu\Calendar\index.js">
+            arguments="C:\Website\meigetsu\Calendar\server.js">
             <environmentVariables></environmentVariables>
         </httpPlatform>
     </system.webServer>
