--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "ava -v",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "author": "Meigetsu Net",
   "license": "UNLICENSED",
