--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "japanesecalendar",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "ava -v",
-    "start": "node server.js"
-  },
-  "author": "Meigetsu Net",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "express": "^4.17.3",
-    "fs.promises": "^0.1.2"
-  }
+    "name": "japanesecalendar",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "prettier": "prettier --write .",
+        "test": "ava --verbose test/",
+        "start": "node server.js"
+    },
+    "author": "Meigetsu Net",
+    "license": "UNLICENSED",
+    "dependencies": {
+        "dayjs": "^1.11.0",
+        "express": "^4.17.3"
+    },
+    "devDependencies": {
+        "ava": "^4.1.0",
+        "prettier": "^2.6.0"
+    }
 }
