--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
         "express": "^4.17.3"
     },
     "devDependencies": {
+        "@types/node": "^17.0.23",
         "ava": "^4.1.0",
-        "prettier": "^2.6.0"
+        "eslint": "^8.12.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-node": "^11.1.0",
+        "prettier": "^2.6.1"
     }
 }
