--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "ava": "^4.1.0",
         "eslint": "^8.12.0",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-ava": "^13.2.0",
         "eslint-plugin-node": "^11.1.0",
         "prettier": "^2.6.1"
     }
