--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "prettier": "prettier --write .",
         "eslint": "eslint --cache --ext .js .",
         "eslint:fix": "eslint --cache --ext .js . --fix",
+        "ci": "run-p eslint test",
         "test": "ava --verbose test/",
         "start": "node server.js"
     },
@@ -27,6 +28,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-ava": "^13.2.0",
         "eslint-plugin-node": "^11.1.0",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.6.1"
     }
 }
