--- a/wwwroot/js/.eslintrc.json
+++ b/wwwroot/js/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-useless-escape": "error",
         "no-constant-condition": ["error", { "checkLoops": false }],
         "no-alert": "error",
+        "no-unused-vars": "off",
         "eqeqeq": ["error", "always", { "null": "ignore" }],
         "default-case": "error",
         "array-callback-return": "error",
