change source type from module to script ( #14 )

--- a/wwwroot/js/.eslintrc.json
+++ b/wwwroot/js/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "extends": [ "eslint:recommended", "plugin:node/recommended", "prettier"  ],
     "parserOptions": {
-        "sourceType": "module",
+        "sourceType": "script",
         "ecmaVersion": 2020
     },
     "env": {
