--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "eslint-plugin-jquery": "^1.5.1",
         "eslint-plugin-node": "^11.1.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.6.1"
+        "prettier": "^2.6.1",
+        "supertest": "^6.2.2"
     }
 }
