--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-ava": "^13.2.0",
         "eslint-plugin-jquery": "^1.5.1",
+        "eslint-plugin-mithril": "^0.2.0",
         "eslint-plugin-node": "^11.1.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.6.1",
