--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint-plugin-node": "^11.1.0",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.6.1",
+        "sinon": "^14.0.0",
         "supertest": "^6.2.2"
     }
 }
