add publish coverage process ( #22 )

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "eslint": "eslint --cache --ext .js .",
         "eslint:fix": "eslint --cache --ext .js . --fix",
         "coverage": "c8 npm test",
-        "ci": "run-p eslint test",
+        "ci": "run-p eslint coverage",
         "test": "ava --verbose test/",
         "start": "node server/index.js"
     },
