--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,20 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+  deploy:
+    name: Deploy to ConoHa
+    runs-on: ubuntu-20.04
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/' }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: rsync to conoha
+        uses: burnett01/rsync-deployments@5.2
+        with:
+          switches: -auz --delete --exclude-from="deploy-exclude-files.txt"
+          path: ./
+          remote_path: ${{ secrets.CONOHA_DEPLOY_PATH }}
+          remote_port: ${{ secrets.CONOHA_SSH_PORT }}
+          remote_host: meigetsu.jp
+          remote_user: Kamioda
+          remote_key: ${{ secrets.DEPLOYSSHKEY }}
