--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     name: Deploy to ConoHa
     runs-on: ubuntu-20.04
     needs: test
-    if: startsWith(github.ref, 'refs/tags/' }}
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v3
       - name: rsync to conoha
