--- a/web.config
+++ b/web.config
@@ -10,8 +10,8 @@
                 resourceType="Unspecified" />
         </handlers>
         <httpPlatform 
-            processPath="C:\Program Files\nodejs\node.exe"
-            arguments="C:\Website\meigetsu\Calendar\server\index.js">
+            processPath="%NODE_EXEC%"
+            arguments="%CALENDAR_SERVER_CORE%">
             <environmentVariables></environmentVariables>
         </httpPlatform>
     </system.webServer>
