--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-  deploy:
+  deployConoHa:
     name: Deploy to ConoHa
     runs-on: ubuntu-20.04
     needs: test
@@ -35,3 +35,31 @@ jobs:
           remote_host: meigetsu.jp
           remote_user: Kamioda
           remote_key: ${{ secrets.DEPLOYSSHKEY }}
+  buildDocker:
+    name: Build Docker Image
+    runs-on: ubuntu-20.04
+    needs: test
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v3
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: create docker image import data
+        run: |
+          mkdir -p ../server
+          rsync -au --delete --exclude-from="deploy-exclude-files.txt" ./ ../server
+          tar -cvf server.tar ../server
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: |
+            kamioda/jpcalendar:latest
+            kamioda/jpcalendar:${{ steps.get_version.outputs.VERSION }}
